--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "start-variants-management": "fiori run --open \"preview.html?fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true&sap-client=130#preview-app\"",
         "build": "ui5 build -a --clean-dest --include-task=generateManifestBundle generateCachebusterInfo",
         "deploy": "npm run build && fiori deploy --config ui5-deploy.yaml && rimraf archive.zip",
+        "deploy-new": "npm run build && fiori deploy --config ui5-deploy.yaml",
         "deploy-config": "fiori add deploy-config",
         "start-mock": "fiori run --open 'test/flpSandboxMockServer.html?sap-client=130#profile-tile'",
         "undeploy": "fiori undeploy --config ui5-deploy.yaml",
